Added test for populating and searching market place elastic